--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
         <delete dir="bin/com/bfh/"/>
         <delete dir="bin/com/cburch/"/>
         <delete dir="bin/com/hepia/"/>
+        <delete dir="bin/edu/cornell"/>
     </target>
 
     <target name="clean">
