--- a/package/macosx/Info.plist
+++ b/package/macosx/Info.plist
@@ -1,92 +1,79 @@
-<?xml version="1.0" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
- <dict>
-  <key>LSMinimumSystemVersion</key>
-  <string>10.9</string>
-  <key>CFBundleDevelopmentRegion</key>
-  <string>English</string>
-  <key>CFBundleAllowMixedLocalizations</key>
-  <true/>
-  <key>CFBundleExecutable</key>
-  <string>Logisim-evolution</string>
-  <key>CFBundleIconFile</key>
-  <string>Logisim-evolution.icns</string>
-  <key>CFBundleIdentifier</key>
-  <string>com.cburch.logisim</string>
-  <key>CFBundleInfoDictionaryVersion</key>
-  <string>6.0</string>
-  <key>CFBundleName</key>
-  <string>Logisim</string>
-  <key>CFBundlePackageType</key>
-  <string>APPL</string>
-  <key>CFBundleShortVersionString</key>
-  <string>2.14.4</string>
-  <key>CFBundleSignature</key>
-  <string>????</string>
-  <!-- See http://developer.apple.com/library/mac/#releasenotes/General/SubmittingToMacAppStore/_index.html
-       for list of AppStore categories -->
-  <key>LSApplicationCategoryType</key>
-  <string>public.app-category.education</string>
-  <key>CFBundleVersion</key>
-  <string>2.14.4</string>
-  <key>NSHumanReadableCopyright</key>
-  <string>Copyright (C) 2001--2018 Carl Burch, BFH, HEIG-VD, HEPIA, et al.</string>
-  <key>CFBundleDocumentTypes</key>
-  <array>
-    <dict>
-      <key>LSItemContentTypes</key>
-      <array>
-        <string>com.cburch.logisim.circ</string>
-      </array>
-
-      <key>CFBundleTypeName</key>
-      <string>Logisim-evolution circuit file</string>
-
-      <key>LSHandlerRank</key>
-      <string>Owner</string>
-
-      <key>CFBundleTypeRole</key>
-      <string>Editor</string>
-
-      <key>LSIsAppleDefaultForType</key>
-      <true/>
-
-    </dict>
-  </array>
-
-  <key>UTExportedTypeDeclarations</key>
-  <array>
-    <dict>
-      <key>UTTypeIdentifier</key>
-      <string>com.cburch.logisim.circ</string>
-
-      <key>UTTypeDescription</key>
-      <string>Logisim-evolution circuit file</string>
-      <key>UTTypeConformsTo</key>
-      <array>
-          <string>public.data</string>
-      </array>
-
-
-      <key>UTTypeTagSpecification</key>
-      <dict>
-
-        <key>public.filename-extension</key>
-        <array>
-          <string>circ</string>
-        </array>
-        <key>public.mime-type</key>
-        <array>
-          <string>application-prs.cburch.logisim</string>
-        </array>
-      </dict>
-    </dict>
-  </array>
-
-  <key>NSHighResolutionCapable</key>
-  <string>true</string>
-  <key>NSSupportsAutomaticGraphicsSwitching</key>
-  <string>true</string>
- </dict>
+<dict>
+	<key>CFBundleAllowMixedLocalizations</key>
+	<true/>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Logisim-evolution circuit file</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSIsAppleDefaultForType</key>
+			<true/>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.cburch.logisim.circ</string>
+			</array>
+		</dict>
+	</array>
+	<key>CFBundleExecutable</key>
+	<string>Logisim-evolution</string>
+	<key>CFBundleIconFile</key>
+	<string>Logisim-evolution.icns</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.cburch.logisim</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>Logisim</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.14.6.0</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleVersion</key>
+	<string>2.14.6.0</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.education</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.9</string>
+	<key>NSHighResolutionCapable</key>
+	<string>true</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright (C) 2001--2018 Carl Burch, BFH, HEIG-VD, HEPIA, et al.</string>
+	<key>NSSupportsAutomaticGraphicsSwitching</key>
+	<string>true</string>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Logisim-evolution circuit file</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.cburch.logisim.circ</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>circ</string>
+				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>application-prs.cburch.logisim</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
+</dict>
 </plist>
